# ChangeLog for dev-lang/mono
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.62 2005/10/15 21:53:18 latexer Exp $

*mono-1.1.9.2 (15 Oct 2005)

  15 Oct 2005; Peter Johanson <latexer@gentoo.org> +mono-1.1.9.2.ebuild:
  Bumpity bump.

  28 Sep 2005; Peter Johanson <latexer@gentoo.org> -mono-1.1.7-r1.ebuild,
  -mono-1.1.8.1.ebuild, -mono-1.1.8.2.ebuild, mono-1.1.8.3.ebuild,
  -mono-1.1.9.ebuild, mono-1.1.9.1.ebuild:
  Add missing sys-devel/bc dep from bug #107519. Remove some older 1.1.x ebuilds.

  24 Sep 2005; Peter Johanson <latexer@gentoo.org>
  +files/mono-1.1.9.1-io-layer-fix.diff, mono-1.1.9.1.ebuild:
  Add fix for bug #106971, and remove some unneeded '|| die' text.

*mono-1.1.9.1 (22 Sep 2005)

  22 Sep 2005; Peter Johanson <latexer@gentoo.org> +mono-1.1.9.1.ebuild:
  Bump. Minor bugfix release.

  17 Sep 2005; Peter Johanson <latexer@gentoo.org> mono-1.1.8.3.ebuild,
  mono-1.1.9.ebuild:
  Fix replace-flags usage.

  16 Sep 2005; Peter Johanson <latexer@gentoo.org> mono-1.1.8.3.ebuild:
  Add flag fix for amd64. See bug #96719.

*mono-1.1.9 (16 Sep 2005)

  16 Sep 2005; Peter Johanson <latexer@gentoo.org> +mono-1.1.9.ebuild:
  Bump to new release.

*mono-1.1.8.3 (04 Aug 2005)

  04 Aug 2005; Peter Johanson <latexer@gentoo.org>
  +files/mono-1.1.8.3-array-getvalue.diff, +files/mono-1.1.8.3-icall.diff,
  -mono-1.1.6.ebuild, -mono-1.1.6-r1.ebuild, -mono-1.1.7.ebuild,
  +mono-1.1.8.3.ebuild:
  Bump to new release, including fix for bug #100515. Remove some older 1.1.x
  versions.

*mono-1.1.8.2 (06 Jul 2005)

  06 Jul 2005; Peter Johanson <latexer@gentoo.org> +mono-1.1.8.2.ebuild:
  Bump.

*mono-1.1.8.1 (21 Jun 2005)

  21 Jun 2005; Peter Johanson <latexer@gentoo.org> -mono-1.1.8.ebuild,
  +mono-1.1.8.1.ebuild:
  Bump with some key fixes to the 1.1.8 release, and remove the duff 1.1.8
  release.

*mono-1.1.8 (17 Jun 2005)
