@@ -1,2 +1,0 @@
-MD5 61700d5e113a1c9c99511971141b6901 mono-1.0.6.tar.gz 18486989
-MD5 465cf1256ae0ae7aac8c70a85991ddeb mcs-1.0.6.tar.gz 22322108
